[package]
name = "uniswap_relay_dapp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance DApp for monitoring Uniswap events via subgraphs and Redis pub/sub"
license = "MIT"
repository = "https://github.com/pwmpw/uniswap_relay_dapp"
keywords = ["blockchain", "defi", "uniswap", "subgraph", "redis"]
categories = ["blockchain", "network-programming"]

[workspace]
members = ["."]

[[bin]]
name = "uniswap_relay_dapp"
path = "src/main.rs"

[dependencies]

# Error handling
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dashmap = "5.5"
futures = "0.3"
graphql_client = "0.13"
hex = "0.4"

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# GraphQL & HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"

# Logging & Telemetry
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
